5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4063/executions/1578_2896.log
== TEST (2019-03-20 18:48:32) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Python: ").

# Impressao de saidas prit
print("Python: ").
-- ERROR:
File "XXXX", line 4
    var = input().
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:48:53) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Python: e maravilhoso ").

# Impressao de saidas prit
print("Python: ").
-- ERROR:
File "XXXX", line 4
    var = input().
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 18:48:55) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Python: e maravilhoso ").

# Impressao de saidas prit
print("Python: ").
-- EXECUTION TIME:
0.132658
-- ERROR:
  File "/home/codebench/codes/1578/2896/main.py", line 4
    var = input().
                 ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:48:56) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Python: e maravilhoso ").

# Impressao de saidas prit
print("Python: ").
-- ERROR:
File "XXXX", line 4
    var = input().
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:52:54) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Digite o nome").

# Impressao de saidas prit
print(var)
-- ERROR:
File "XXXX", line 4
    var = input().
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:53:01) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Digite o nome")

# Impressao de saidas prit
print(var)
-- OUTPUT:
Ada_Lovelace
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 18:53:03) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Digite o nome")

# Impressao de saidas prit
print(var)
-- EXECUTION TIME:
0.188874
-- TEST CASE 1:
---- input:
Ada_Lovelace
---- correct output:
Ada_Lovelace
---- user output:
Ada_Lovelace
-- TEST CASE 2:
---- input:
Teste
---- correct output:
Teste
---- user output:
Teste
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
